correção do nome do autor
Como atuei apenas confeccionando o hardware relativo ao Arduino, estou corregindo o nome do Artista responsável pelo projeto, já que  ferramenta cria automaticamente este campo.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Intimatron by carlosdelfino</title>
+    <title>Intimatron by Henrique Roscoe</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -51,7 +51,7 @@ Texto: <a href="http://handprint.org.uk/wp/porfolio/the-humble-market/">http://h
 </ul>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/carlosdelfino">carlosdelfino</a></p>
+        <p>This project is maintained by <a href="https://1mpar.com">Henrique Roscoe</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
